# python-project-template

./: CHANGELOG.rst  LICENSE  README.md  README.rst  cookiecutter.json
{{cookiecutter.repo_name}}/: .coveragerc  .devcontainer.json  .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
{{cookiecutter.repo_name}}/.github/workflows/: tests.yml  version-inc.yml  version-increment.yml
{{cookiecutter.repo_name}}/resources/docs/: conf.py  readme.rst  usage.rst
{{cookiecutter.repo_name}}/resources/envs/: {{cookiecutter.package_name}}.yml  {{cookiecutter.project_env_file}}.yml
{{cookiecutter.repo_name}}/resources/scripts/: deploy.py
{{cookiecutter.repo_name}}/src/.info/: AUTHORS.md  CHANGELOG.md
{{cookiecutter.repo_name}}/src/{{cookiecutter.package_name}}/: __init__.py  __main__.py  cli.py  {{cookiecutter.c_extension_module}}.pyx
{{cookiecutter.repo_name}}/tests/: test_{{cookiecutter.package_name}}.py
