[build-system]
requires = [
    "setuptools>=30.3.0",
    "wheel",
{%- if cookiecutter.c_extension_support == 'cffi' %}
    "cffi>=1.0.0",
{%- endif %}
]

[tool.bumpver]
current_version = "2025.7.0.63"
version_pattern = "YYYY.MM.PATCH.INC0"
version_regex = "(?P<year>[0-9]{4})\\.(?P<month>[0-9]{1,2})\\.(?P<patch>[0-9]+)\\.(?P<inc>[0-9]+)"
version_replacement = "{year}.{month}.{patch}.{inc}"
commit_message = "ver(h3.sampler): bump version from {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"setup.py" = [
    "{version}",
]
"README.md" = [
    "{version}",
]
{%- if cookiecutter.named_package == 'no' %}
"src/{{cookiecutter.package_name}}/__init__.py" = [
    "{version}",
]
{%- else %}
"src/{{cookiecutter.named_package_name}}/{{cookiecutter.package_name}}/__init__.py" = [
    "{version}",
]
{%- endif %}
"resources/docs/conf.py" = [
    "{version}",
]
"resources/docs/readme.rst" = [
    "{version}",
]


[tool.ruff.lint]
select = ["ALL"]

[tool.ruff]
line-length = 180
ignore = ["EM101", "TRY003", "T201", "D205", "D212", "PTH", "EM", "D400", "D415", "D401", "PLR0913", "D413", "ERA001", "RET504", "FBT003",
"D404", "FBT001", "FBT002"]
